--- a/BAEKJOON/BAEKJOON.vcxproj.filters
+++ b/BAEKJOON/BAEKJOON.vcxproj.filters
@@ -15,16 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="05_01.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="05_02.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="05_03.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="05_04.cpp">
+    <ClCompile Include="9935.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
